# geophysics-netcdf-programs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake_build_script_gadi-gnu.sh  cmake_build_script_gadi-intel.sh  cmake_build_script_gadi.sh  cmake_build_script_ubuntu.sh  cmake_build_script_windows-vs2022.bat  environment.txt
cmake/: Configure-External-Packages.cmake
makefiles/: aseggdf2netcdf.make  geophysicsnc2shape.make  intrepid2netcdf.make  run_make_gadi.sh  test_geophysics_netcdf_reader.make
src/: README.md  aseggdf2netcdf.cpp  geophysicsnc2shape.cpp  intrepid2netcdf.cpp  metadata.h  test_geophysics_netcdf.cpp  test_geophysics_netcdf_reader.cpp
tests/aseggdf2netcdf/: aseggdf2netcdf.bat  aseggdf2netcdf.con
tests/test_reader/: run_hdfview.bat  run_ncdump.bat  test.nc  test.nc.txt
visualstudio/: README.md
visualstudio/aseggdf2netcdf/: aseggdf2netcdf.sln  aseggdf2netcdf.vcxproj  aseggdf2netcdf.vcxproj.filters
visualstudio/geophysics-netcdf-all/: geophysics-netcdf-all.sln
visualstudio/geophysicsnc2shape/: geophysicsnc2shape.sln  geophysicsnc2shape.vcxproj  geophysicsnc2shape.vcxproj.filters
visualstudio/intrepid2netcdf/: intrepid2netcdf.sln  intrepid2netcdf.vcxproj  intrepid2netcdf.vcxproj.filters
visualstudio/libnetcdfcxx/: libnetcdfcxx.vcxproj
visualstudio/propertysheets/: cpp-utils.props  csv-parser.props  geophysics-netcdf.props  msmpi.x64.props  netcdf4-cxx.props
visualstudio/test_geophysics_netcdf/: test_geophysics_netcdf.sln  test_geophysics_netcdf.vcxproj  test_geophysics_netcdf.vcxproj.filters
visualstudio/test_geophysics_netcdf_reader/: test_geophysics_netcdf_reader.sln  test_geophysics_netcdf_reader.vcxproj  test_geophysics_netcdf_reader.vcxproj.filters
